[package]
name = "rmls"
version = "0.0.0"
edition = "2021"
authors = ["Rusty Rain <y@liu.mx>"]
description = "MLS in Rust"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rmls"
homepage = "https://rmls.io"
repository = "https://github.com/ngr-tc/rmls"

[dependencies]
thiserror = "1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

#hpke = "0.10.0"

# RingCryptoProvider
ring = "0.16.20"

# RustCryptoProvider
sha2 = "0.10.7"
hmac = "0.12.1"
hkdf = "0.12.3"
ed25519-dalek = "2.0.0"
ecdsa = "0.16.8"
sec1 = "0.7.3"
signature = "2.1.0"
p256 = "0.13.2"
p384 = "0.13.0"
p521 = "0.13.0"