[package]
name = "rmls"
version = "0.0.0"
edition = "2021"
authors = ["Rusty Rain <y@liu.mx>"]
description = "MLS in Rust"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rmls"
homepage = "https://rmls.io"
repository = "https://github.com/ngr-tc/rmls"

[dependencies]
thiserror = "1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"

####CryptoProvider#####
# Common
hpke = "0.10.0"

# RingCryptoProvider: TODO(yngrtc): use ring feature
ring = "0.16.20"

# RustCryptoProvider: TODO(yngrtc): use rust feature
sha2 = "0.10.7"
hmac = "0.12.1"
hkdf = "0.12.3"
ed25519-dalek = "2.0.0"
ecdsa = "0.16.8"
sec1 = "0.7.3"
signature = "2.1.0"
aead = "0.5.2"
aes-gcm = "0.10.2"
chacha20poly1305 = "0.10.1"
p256 = "0.13.2"
p384 = "0.13.0"
p521 = "0.13.0"

[dev-dependencies]
hex = { version = "0.4", features = ["serde"] }